--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,6 +47,9 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\AvancarCena.cs" />
+     <Compile Include="Assets\Scripts\Cano.cs" />
+     <Compile Include="Assets\Scripts\FlappyBird.cs" />
+     <Compile Include="Assets\Scripts\MoverFundo.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
